--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "KHAN-MD",
-  "description": "Javascript WhatsApp bot made by Jᴀᴡᴀᴅ TᴇᴄʜX",
-  "logo": "https://raw.githubusercontent.com/XdTechPro/KHAN-DATA/refs/heads/main/logo/KHAN.png",
-  "keywords": ["KHAN-MD"],
+  "name": "🦋ǫᴜᴇᴇɴ ɢʀɪʟs🦋",
+  "description": "Javascript WhatsApp bot made by Njabulo",
+  "logo": "🦋ǫᴜᴇᴇɴ ɢʀɪʟs🦋",
+  "keywords": ["Queen-grils"],
   "success_url": "/",
 
     "stack": "container",
@@ -16,7 +16,7 @@
     "STICKER_NAME": {
       "description": "type your sticker pack name.",
       "required": false,
-      "value": "KHAN-MD"
+      "value": "🦋ǫᴜᴇᴇɴ ɢʀɪʟs🦋"
     }, 
       
     "PREFIX": {
@@ -79,27 +79,27 @@
     "AUTO_STATUS_MSG": {
       "description": "Type custom message on status reply",
       "required": true,
-      "value": "*SEEN YOUR STATUS BY KHAN-MD 🖤*"
+      "value": "🦋ɴᴊᴀʙᴜʟᴏ ᴊʙ🦋"
    
      }, 
     
     "OWNER_NAME": {
       "description": "Type Bot Owner Name.",
       "required": false,
-      "value": "Jᴀᴡᴀᴅ TᴇᴄʜX"
+      "value": "🦋ǫᴜᴇᴇɴ ɢʀɪʟs🦋"
 }, 
 
     "OWNER_NUMBER": {
       "description": "put the owner number for bot.",
       "required": false,
-      "value": "92310344XXXX"
+      "value": "26777821911"
 
     }, 
 
     "BOT_NAME": {
       "description": "Type here the bot name.",
       "required": false,
-      "value": "KHAN-MD"
+      "value": "🦋ǫᴜᴇᴇɴ ɢʀɪʟs🦋"
 
       }, 
 
@@ -119,7 +119,7 @@
      "DESCRIPTION": {
       "description": "add caption for menu and other",
       "required": false,
-      "value": "*© ᴘᴏᴡᴇʀᴇᴅ ʙʏ Jᴀᴡᴀᴅ TᴇᴄʜX*"
+      "value": "*🦋ǫᴜᴇᴇɴ ɢʀɪʟs🦋*"
     },
 
       "DELETE_LINKS": {
