--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "🦋ǫᴜᴇᴇɴ ɢʀɪʟs🦋",
   "description": "Javascript WhatsApp bot made by Njabulo",
-  "logo": "🦋ǫᴜᴇᴇɴ ɢʀɪʟs🦋",
+  "logo": "https://files.catbox.moe/mmm8ns.jpg",
   "keywords": ["Queen-grils"],
   "success_url": "/",
 
